--- a/BloodConnector.WebAPI/app/views/signup.html
+++ b/BloodConnector.WebAPI/app/views/signup.html
@@ -23,8 +23,11 @@
         <input class="form-control" id="txtPhone" name="txtPhone" type="text"
                placeholder="+880XXXXXXXXXX"
                ng-model="vm.registration.email"
-               required />
+               required/>
     </div>
+    <select ng-model="vm.registration.bloodGrupId" ng-options="bloodGrup.id as bloodGrup.symbole for bloodGrup in vm.bloodGrups">
+        <option value="">Select a person</option>
+    </select>
     <input type="password" class="form-control" placeholder="Password" data-ng-model="vm.registration.password" required>
     <input type="password" class="form-control" placeholder="Confirm Password" data-ng-model="vm.registration.confirmPassword" required>
     <button class="btn btn-lg btn-info btn-block" type="submit" data-ng-click="vm.signUp()">Submit</button>
