--- a/BloodConnector.WebAPI/Content/Site.css
+++ b/BloodConnector.WebAPI/Content/Site.css
@@ -57,3 +57,7 @@ body {
         border-top-left-radius: 0;
         border-top-right-radius: 0;
     }
+
+    .opacity-color {
+        color: #999;
+    }
