--- a/BloodConnector.WebAPI/app/views/signup.html
+++ b/BloodConnector.WebAPI/app/views/signup.html
@@ -5,12 +5,15 @@
                                     signupForm.txtEmail.$dirty}">
 
         <input class="form-control" id="txtEmail" name="txtEmail" type="email"
-               placeholder="Your Email"
+               placeholder="Your Email (Required)"
                ng-model="vm.registration.email"
                required
                autofocus/>
 
-        <span class="help-block has-error">
+        <span class="help-block has-error" ng-if="signupForm.txtEmail.$dirty">
+            <span ng-show="signupForm.txtEmail.$error.required">
+                Required!
+            </span>
             <span ng-show="signupForm.txtEmail.$error.email">
                 Not valid email!
             </span>
@@ -21,16 +24,30 @@
                                     signupForm.txtPhone.$dirty}">
 
         <input class="form-control" id="txtPhone" name="txtPhone" type="text"
-               placeholder="+880XXXXXXXXXX"
-               ng-model="vm.registration.email"
+               placeholder="+880XXXXXXXXXX (Required)"
+               ng-model="vm.registration.phoneNumber"
                required/>
+
+        <span class="help-block has-error" ng-if="signupForm.txtPhone.$dirty">
+            <span ng-show="signupForm.txtPhone.$error.required">
+                Required!
+            </span>
+        </span>
     </div>
-    <select ng-model="vm.registration.bloodGrupId" ng-options="bloodGrup.id as bloodGrup.symbole for bloodGrup in vm.bloodGrups">
-        <option value="">Select a person</option>
-    </select>
+    <div class="form-group" ng-class="{'has-error':signupForm.drpBloodGroup.$invalid && signupForm.drpBloodGroup.$dirty}">
+        <select class="form-control" id="drpBloodGroup" name="drpBloodGroup" ng-model="vm.registration.bloodGrupId" required>
+            <option value="" disabled>Select Blood Group (Required)</option>
+            <option ng-repeat="bloodGrup in vm.bloodGrups" value="{{bloodGrup.id}}">{{bloodGrup.symbole}}</option>
+        </select>
+        <span class="help-block has-error" ng-if="signupForm.drpBloodGroup.$dirty">
+            <span ng-show="signupForm.drpBloodGroup.$error.required">
+                Required!
+            </span>
+        </span>
+    </div>
     <input type="password" class="form-control" placeholder="Password" data-ng-model="vm.registration.password" required>
     <input type="password" class="form-control" placeholder="Confirm Password" data-ng-model="vm.registration.confirmPassword" required>
-    <button class="btn btn-lg btn-info btn-block" type="submit" data-ng-click="vm.signUp()">Submit</button>
+    <button class="btn btn-lg btn-info btn-block" type="submit" data-ng-click="vm.signUp()" ng-disabled="signupForm.$invalid">Submit</button>
     <div data-ng-hide="vm.message == ''" data-ng-class="(vm.savedSuccessfully) ? 'alert alert-success' : 'alert alert-danger'">
         {{vm.message}}
     </div>
