--- a/BloodConnector.WebAPI/Views/Shared/_Layout.cshtml
+++ b/BloodConnector.WebAPI/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li data-ng-hide="!vm.authentication.isAuth"><a href="#!">Welcome {{vm.authentication.userName}}</a></li>
-                    <li data-ng-hide="!vm.authentication.isAuth"><a href="#!orders">My Orders</a></li>
+                    <li data-ng-hide="!vm.authentication.isAuth"><a href="#!users">My Orders</a></li>
                     <li data-ng-hide="!vm.authentication.isAuth"><a href="" data-ng-click="vm.logOut()">Logout</a></li>
                     <li data-ng-hide="vm.authentication.isAuth"> <a href="#!login">Login</a></li>
                     <li data-ng-hide="vm.authentication.isAuth"> <a href="#!signup">Sign Up</a></li>
