--- a/BloodConnector.WebAPI/app/views/users.html
+++ b/BloodConnector.WebAPI/app/views/users.html
@@ -1,38 +1,49 @@
 ﻿
 <div class="row" data-ng-controller="usersController as vm">
-    <div class="col-md-2">
-        &nbsp;
-    </div>
-    <div class="col-md-8">
-        <table class="table table-striped table-bordered table-hover">
-            <thead>
-                <tr>
-                    <th>Order ID</th>
-                    <th>Customer</th>
-                    <th>City</th>
-                    <th>Shipped</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr data-ng-repeat="user in vm.users">
-                    <td>
-                        {{ user.orderID }}
-                    </td>
-                    <td>
-                        {{ user.customerName }}
-                    </td>
-                    <td>
-                        {{ user.shipperCity }}
-                    </td>
-                    <td>
-                       <input type="checkbox" data-ng-model="user.isShipped" disabled="disabled">
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-
-    <div class="col-md-2">
-        &nbsp;
-    </div>
+    <table class="table table-striped table-condensed table-hover">
+        <thead>
+        <tr>
+            <th class="id" custom-sort order="'id'" sort="sort">Id&nbsp;</th>
+            <th class="name" custom-sort order="'name'" sort="sort">Name&nbsp;</th>
+            <th class="description" custom-sort order="'description'" sort="sort">Description&nbsp;</th>
+            <th class="field3" custom-sort order="'field3'" sort="sort">Field 3&nbsp;</th>
+            <th class="field4" custom-sort order="'field4'" sort="sort">Field 4&nbsp;</th>
+            <th class="field5" custom-sort order="'field5'" sort="sort">Field 5&nbsp;</th>
+        </tr>
+        </thead>
+        <tfoot>
+        <td colspan="6">
+            <div class="pagination pull-right">
+                <ul>
+                    <li ng-class="{disabled: vm.currentPage == 0}">
+                        <a href ng-click="vm.prevPage()">« Prev</a>
+                    </li>
+            
+                    <li ng-repeat="n in range(vm.pagedItems.length, vm.currentPage, vm.currentPage + vm.gap) "
+                        ng-class="{active: n == vm.currentPage}"
+                        ng-click="vm.setPage()">
+                        <a href ng-bind="n + 1">1</a>
+                    </li>
+             
+                    <li ng-class="{disabled: (vm.currentPage) == vm.pagedItems.length - 1}">
+                        <a href ng-click="vm.nextPage()">Next »</a>
+                    </li>
+                </ul>
+            </div>
+        </td>
+        </tfoot>
+        <pre>pagedItems.length: {{vm.pagedItems.length|json}}</pre>
+        <pre>currentPage: {{vm.currentPage|json}}</pre>
+        <pre>currentPage: {{vm.sort|json}}</pre>
+        <tbody>
+        <tr ng-repeat="item in vm.pagedItems[vm.currentPage] | orderBy:vm.sort.sortingOrder:vm.sort.reverse">
+            <td>{{item.id}}</td>
+            <td>{{item.name}}</td>
+            <td>{{item.description}}</td>
+            <td>{{item.field3}}</td>
+            <td>{{item.field4}}</td>
+            <td>{{item.field5}}</td>
+        </tr>
+        </tbody>
+    </table>
 </div>
