--- a/BloodConnector.WebAPI/app/views/users.html
+++ b/BloodConnector.WebAPI/app/views/users.html
@@ -1,4 +1,4 @@
-﻿
+﻿<div style="height: 100px;">&nbsp;</div>
 <div class="row" data-ng-controller="usersController as vm">
     <table class="table table-striped table-condensed table-hover">
         <thead>
@@ -13,28 +13,27 @@
         </thead>
         <tfoot>
         <td colspan="6">
-            <div class="pagination pull-right">
-                <ul>
+            <nav aria-label="Page navigation">
+                <ul class="pagination">
                     <li ng-class="{disabled: vm.currentPage == 0}">
-                        <a href ng-click="vm.prevPage()">« Prev</a>
+                        <a href="javascript:void(0);" aria-label="Previous" ng-click="vm.prevPage()">
+                            <span aria-hidden="true">&laquo; Prev</span>
+                        </a>
                     </li>
-            
-                    <li ng-repeat="n in range(vm.pagedItems.length, vm.currentPage, vm.currentPage + vm.gap) "
+                    <li ng-repeat="n in vm.range(vm.pagedItems.length, vm.currentPage, vm.currentPage + vm.gap)"
                         ng-class="{active: n == vm.currentPage}"
-                        ng-click="vm.setPage()">
-                        <a href ng-bind="n + 1">1</a>
+                        ng-click="vm.setPage(n)">
+                        <a href="javascript:void(0);" ng-bind="n + 1">1</a>
                     </li>
-             
                     <li ng-class="{disabled: (vm.currentPage) == vm.pagedItems.length - 1}">
-                        <a href ng-click="vm.nextPage()">Next »</a>
+                        <a href="javascript:void(0);" aria-label="Next" ng-click="vm.nextPage()">
+                            <span aria-hidden="true">Next &raquo;</span>
+                        </a>
                     </li>
                 </ul>
-            </div>
+            </nav>
         </td>
         </tfoot>
-        <pre>pagedItems.length: {{vm.pagedItems.length|json}}</pre>
-        <pre>currentPage: {{vm.currentPage|json}}</pre>
-        <pre>currentPage: {{vm.sort|json}}</pre>
         <tbody>
         <tr ng-repeat="item in vm.pagedItems[vm.currentPage] | orderBy:vm.sort.sortingOrder:vm.sort.reverse">
             <td>{{item.id}}</td>
