Try to implement filter

--- a/BloodConnector.WebAPI/app/views/users.html
+++ b/BloodConnector.WebAPI/app/views/users.html
@@ -1,5 +1,6 @@
 ﻿<div style="height: 100px;">&nbsp;</div>
 <div class="row" data-ng-controller="usersController as vm">
+    <label>Any: <input ng-model="search.$"></label> <br>
     <table class="table table-striped table-condensed table-hover">
         <thead>
         <tr>
