--- a/BloodConnector.WebAPI/app/views/users.html
+++ b/BloodConnector.WebAPI/app/views/users.html
@@ -1,7 +1,7 @@
 ﻿<div style="height: 100px;">&nbsp;</div>
 <div class="row" data-ng-controller="usersController as vm">
     <input type="text" ng-model="vm.searchText.name" />
-    <table class="table table-striped">
+    <table class="table table-striped table-bordered">
         <thead>
             <tr>
                 <th>Email</th>
