--- a/BloodConnector.WebAPI/Views/Shared/_Layout.cshtml
+++ b/BloodConnector.WebAPI/Views/Shared/_Layout.cshtml
@@ -32,13 +32,15 @@
         </div>
     </div>
 
+    <hr class="transparent-border"/>
+
     <div class="container">
         @RenderBody()
     </div>
 
-    <hr />
+    <hr class="transparent-border"/>
 
-    <div id="footer">
+    <footer>
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
@@ -49,7 +51,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </footer>
 
     <!-- 3rd party libraries -->
 
