--- a/BloodConnector.WebAPI/app/views/signup.html
+++ b/BloodConnector.WebAPI/app/views/signup.html
@@ -1,74 +1,116 @@
-﻿<form class="form-login" role="form" novalidate name="signupForm" data-ng-controller="signupController as vm">
-    <div data-ng-hide="!vm.messages.length" data-ng-class="(vm.savedSuccessfully) ? 'alert alert-success' : 'alert alert-danger'">
-        <div ng-hide="vm.savedSuccessfully">
-            <span>Failed to register user due to:<br /></span>
-            <ul>
-                <li ng-repeat="message in vm.messages">{{message}}</li>
-            </ul>
-        </div>
-        <div ng-show="vm.savedSuccessfully">
-            {{vm.messages[0]}}    
-        </div>
+﻿<div class="row" data-ng-controller="signupController as vm">
+    <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+        <form class="form-signup" role="form" novalidate name="signupForm">
+            <div data-ng-hide="!vm.messages.length" data-ng-class="(vm.savedSuccessfully) ? 'alert alert-success' : 'alert alert-danger'">
+                <div ng-hide="vm.savedSuccessfully">
+                    <span>Failed to register user due to:<br /></span>
+                    <ul>
+                        <li ng-repeat="message in vm.messages">{{message}}</li>
+                    </ul>
+                </div>
+                <div ng-show="vm.savedSuccessfully">
+                    {{vm.messages[0]}}
+                </div>
+            </div>
+            <h2>Please Sign Up <small>It's free and always will be.</small></h2>
+            <hr class="colorgraph">
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-md-6">
+                    <div class="form-group">
+                        <span class="control-label">First Name :</span>
+                        <input type="text" name="firstName" id="firstName" class="form-control input-lg"
+                               placeholder="First Name"
+                               ng-model="vm.registration.firstName"
+                               tabindex="0"
+                               autofocus />
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-6">
+                    <div class="form-group">
+                        <span class="control-label">Last Name :</span>
+                        <input type="text" name="lastName" id="lastName" class="form-control input-lg"
+                               placeholder="Last Name"
+                               ng-model="vm.registration.lastName"
+                               tabindex="0"/>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <span class="control-label">Display Name / Nick Name :</span>
+                <input type="text" name="nikeName" id="nikeName" class="form-control input-lg"
+                       ng-model="vm.registration.nikeName"
+                       placeholder="Display Name"
+                       tabindex="0"/>
+            </div>
+            <div class="form-group required" ng-class="{'has-error':signupForm.txtEmail.$invalid && signupForm.txtEmail.$dirty}">
+                <span class="control-label">E-mail :</span>
+                <input class="form-control input-lg" id="txtEmail" name="txtEmail" type="email"
+                       placeholder="Your Email"
+                       ng-model="vm.registration.email"
+                       required/>
+                <span class="help-block has-error" ng-if="signupForm.txtEmail.$dirty">
+                    <span ng-show="signupForm.txtEmail.$error.required">Required!</span>
+                    <span ng-show="signupForm.txtEmail.$error.email">Not valid email!</span>
+                </span>
+            </div>
+            <div class="form-group required" ng-class="{'has-error':signupForm.txtPhone.$invalid && signupForm.txtPhone.$dirty}">
+                <span class="control-label">Contact Number :</span>
+                <input type="text" class="form-control input-lg" id="txtPhone" name="txtPhone"
+                       placeholder="+880XXXXXXXXXX"
+                       ng-model="vm.registration.phoneNumber"
+                       ng-pattern="/^([0-9\(\)\/\+ \-]{5,15})$/"
+                       required/>
+                <span class="help-block has-error" ng-if="signupForm.txtPhone.$dirty">
+                    <span ng-show="signupForm.txtPhone.$error.required">Required!</span>
+                    <span ng-show="signupForm.txtPhone.$error.pattern">Not a valid Contact Number!</span>
+                </span>
+            </div>
+            <div class="form-group required" ng-class="{'has-error':signupForm.drpBloodGroup.$invalid && signupForm.drpBloodGroup.$dirty}">
+                <span class="control-label">Blood Group :</span>
+                <select class="form-control input-lg" id="drpBloodGroup" name="drpBloodGroup" ng-model="vm.registration.bloodGroupId" required>
+                    <option value="" disabled>Select Blood Group</option>
+                    <option ng-repeat="bloodGroup in vm.bloodGroups" value="{{bloodGroup.id}}">{{bloodGroup.symbole}}</option>
+                </select>
+                <span class="help-block has-error" ng-if="signupForm.drpBloodGroup.$dirty">
+                    <span ng-show="signupForm.drpBloodGroup.$error.required">Required!</span>
+                </span>
+            </div>
+            <!--https://stackoverflow.com/a/21456918/3835843-->
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-md-6">
+                    <div class="form-group required" ng-class="{'has-error':signupForm.password.$invalid && signupForm.password.$dirty}">
+                        <span class="control-label">Password :</span>
+                        <input type="password" id="password" name="password" class="form-control input-lg"
+                               tabindex="0"
+                               placeholder="Password"
+                               data-ng-model="vm.registration.password"
+                               ng-pattern="/^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{6,}$/"
+                               required/>
+                        <span class="help-block has-error" ng-if="signupForm.password.$dirty">
+                            <span ng-show="signupForm.password.$error.required">Required!</span>
+                            <span ng-show="signupForm.password.$error.pattern">Minimum six characters, at least one letter and one number!</span>
+                        </span>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-6">
+                    <div class="form-group required" ng-class="{'has-error':signupForm.confirmPassword.$invalid && signupForm.confirmPassword.$dirty}">
+                        <span class="control-label">Confirm Password :</span>
+                        <input type="password" id="confirmPassword" name="confirmPassword" class="form-control input-lg"
+                               placeholder="Confirm Password"
+                               data-ng-model="vm.registration.confirmPassword"
+                               compare-to="vm.registration.password"
+                               tabindex="0"
+                               required/>
+                        <span class="help-block has-error" ng-if="signupForm.confirmPassword.$dirty">
+                            <span ng-show="signupForm.confirmPassword.$error.required">Required!</span>
+                            <span ng-show="signupForm.confirmPassword.$error.compareTo && !signupForm.confirmPassword.$error.required">
+                                Confirm password doesn't match with password!
+                            </span>
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <button class="btn btn-lg btn-info btn-block" type="button" data-ng-click="vm.signUp()" ng-disabled="signupForm.$invalid">Submit</button>
+        </form>
     </div>
-    <h2 class="form-login-heading">Sign up</h2>
-    <div class="form-group" ng-class="{'has-error':signupForm.txtEmail.$invalid && signupForm.txtEmail.$dirty}">
-
-        <input class="form-control" id="txtEmail" name="txtEmail" type="email"
-               placeholder="Your Email"
-               ng-model="vm.registration.email"
-               required
-               autofocus />
-        <span class="help-block has-error" ng-if="signupForm.txtEmail.$dirty">
-            <span ng-show="signupForm.txtEmail.$error.required">Required!</span>
-            <span ng-show="signupForm.txtEmail.$error.email">Not valid email!</span>
-        </span>
-    </div>
-    <div class="form-group"
-         ng-class="{'has-error':signupForm.txtPhone.$invalid && signupForm.txtPhone.$dirty}">
-
-        <input class="form-control" id="txtPhone" name="txtPhone" type="text"
-               placeholder="+880XXXXXXXXXX"
-               ng-model="vm.registration.phoneNumber"
-               ng-pattern="/^([0-9\(\)\/\+ \-]{5,15})$/"
-               required />
-        <span class="help-block has-error" ng-if="signupForm.txtPhone.$dirty">
-            <span ng-show="signupForm.txtPhone.$error.required">Required!</span>
-            <span ng-show="signupForm.txtPhone.$error.pattern">Not a valid Contact Number!</span>
-        </span>
-    </div>
-    <div class="form-group" ng-class="{'has-error':signupForm.drpBloodGroup.$invalid && signupForm.drpBloodGroup.$dirty}">
-        <select class="form-control" id="drpBloodGroup" name="drpBloodGroup" ng-model="vm.registration.bloodGroupId" required>
-            <option value="" disabled>Select Blood Group</option>
-            <option ng-repeat="bloodGroup in vm.bloodGroups" value="{{bloodGroup.id}}">{{bloodGroup.symbole}}</option>
-        </select>
-        <span class="help-block has-error" ng-if="signupForm.drpBloodGroup.$dirty">
-            <span ng-show="signupForm.drpBloodGroup.$error.required">Required!</span>
-        </span>
-    </div>
-    <!--https://stackoverflow.com/a/21456918/3835843-->
-    <div class="form-group" ng-class="{'has-error':signupForm.password.$invalid && signupForm.password.$dirty}">
-        <input type="password" id="password" name="password" class="form-control"
-               placeholder="Password"
-               data-ng-model="vm.registration.password"
-               ng-pattern="/^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{6,}$/"
-               required />
-        <span class="help-block has-error" ng-if="signupForm.password.$dirty">
-            <span ng-show="signupForm.password.$error.required">Required!</span>
-            <span ng-show="signupForm.password.$error.pattern">Minimum six characters, at least one letter and one number!</span>
-        </span>
-    </div>
-    <div class="form-group" ng-class="{'has-error':signupForm.confirmPassword.$invalid && signupForm.confirmPassword.$dirty}">
-        <input type="password" id="confirmPassword" name="confirmPassword" class="form-control"
-               placeholder="Confirm Password"
-               data-ng-model="vm.registration.confirmPassword"
-               compare-to="vm.registration.password"
-               required />
-        <span class="help-block has-error" ng-if="signupForm.confirmPassword.$dirty">
-            <span ng-show="signupForm.confirmPassword.$error.required">Required!</span>
-            <span ng-show="signupForm.confirmPassword.$error.compareTo && !signupForm.confirmPassword.$error.required">
-                Confirm password doesn't match with password!
-            </span>
-        </span>
-    </div>
-    <button class="btn btn-lg btn-info btn-block" type="submit" data-ng-click="vm.signUp()" ng-disabled="signupForm.$invalid">Submit</button>
-</form>
+</div>
