--- a/BloodConnector.WebAPI/Content/Site.css
+++ b/BloodConnector.WebAPI/Content/Site.css
@@ -339,6 +339,16 @@ div.user-menu div.user-menu-content:not(.active){
     font-family: 'FontAwesome';
     padding: 6px 12px !important;
 }
+
+.disable-text-selection {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 /* -- media query for user profile image -- */
 @media (max-width: 767px) {
     .user-image {
