--- a/BloodConnector.WebAPI/app/views/users.html
+++ b/BloodConnector.WebAPI/app/views/users.html
@@ -14,7 +14,7 @@
         <div class="col-xs-12 col-sm-4 col-md-4"></div>
     </div>
 
-    <div class="row search">
+    <div class="row search disable-text-selection">
         <div class="table-responsive">
             <table class="table table-striped table-bordered table-condensed table-hover">
                 <thead>
