--- a/BloodConnector.WebAPI/app/views/login.html
+++ b/BloodConnector.WebAPI/app/views/login.html
@@ -1,9 +1,24 @@
-﻿<form role="form" data-ng-controller="loginController as vm">
+﻿<form role="form" class="form-signin" data-ng-controller="loginController as vm">
     <div data-ng-hide="vm.message == ''" class="alert alert-danger">
         {{vm.message}}
     </div>
-    <h2 class="form-login-heading">Login</h2>
-    <input type="text" class="form-control" placeholder="Username" data-ng-model="vm.loginData.userName" required autofocus>
-    <input type="password" class="form-control" placeholder="Password" data-ng-model="vm.loginData.password" required>
-    <button class="btn btn-md btn-info btn-block" type="submit" data-ng-click="vm.login()">Login</button>
+    <img class="img-responsive" src="/Images/blood_logo.jpg" />
+    <h3 class="form-signin-heading">Welcome Back! Please Sign In</h3>
+    <hr class="colorgraph"/>
+    <div class="form-group">
+        <span class="control-label">E-mail :</span>
+        <input id="txtEmail" name="txtEmail" type="email" class="form-control input-lg"
+               tabindex="0"
+               placeholder="Your Email"
+               data-ng-model="vm.loginData.email"
+               autofocus />
+    </div>
+    <div class="form-group">
+        <span class="control-label">Password :</span>
+        <input type="password" id="password" name="password" class="form-control input-lg"
+               tabindex="0"
+               placeholder="Password"
+               data-ng-model="vm.loginData.password" />
+    </div>
+    <button class="btn btn-lg btn-primary btn-block" name="Submit" type="button" data-ng-click="vm.login()">Login</button>
 </form>
