--- a/BloodConnector.WebAPI/Views/Shared/_Layout.cshtml
+++ b/BloodConnector.WebAPI/Views/Shared/_Layout.cshtml
@@ -23,10 +23,10 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li data-ng-hide="!vm.authentication.isAuth"><a href="#!">Welcome <span ng-bind="vm.authentication.userName"></span></a></li>
-                    <li data-ng-hide="!vm.authentication.isAuth"><a href="#!users">My Orders</a></li>
-                    <li data-ng-hide="!vm.authentication.isAuth"><a href="" data-ng-click="vm.logOut()">Logout</a></li>
-                    <li data-ng-hide="vm.authentication.isAuth"> <a href="#!login">Login</a></li>
-                    <li data-ng-hide="vm.authentication.isAuth"> <a href="#!signup">Sign Up</a></li>
+                    <li data-ng-hide="!vm.authentication.isAuth"><a href="#!users">Donor's</a></li>
+                    <li data-ng-hide="!vm.authentication.isAuth"><a href="" data-ng-click="vm.logOut()">LogOut</a></li>
+                    <li data-ng-hide="vm.authentication.isAuth"> <a href="#!login">LogIn</a></li>
+                    <li data-ng-hide="vm.authentication.isAuth"> <a href="#!signup">SignUp</a></li>
                 </ul>
             </div>
         </div>
