--- a/BloodConnector.WebAPI/app/views/login.html
+++ b/BloodConnector.WebAPI/app/views/login.html
@@ -20,5 +20,5 @@
                placeholder="Password"
                data-ng-model="vm.loginData.password" />
     </div>
-    <button class="btn btn-lg btn-primary btn-block" name="Submit" type="button" data-ng-click="vm.login()">Login</button>
+    <button class="btn btn-lg btn-danger btn-block" name="Submit" type="button" data-ng-click="vm.login()">Login</button>
 </form>
