--- a/BloodConnector.WebAPI/app/views/signup.html
+++ b/BloodConnector.WebAPI/app/views/signup.html
@@ -110,7 +110,7 @@
                     </div>
                 </div>
             </div>
-            <button class="btn btn-lg btn-info btn-block" type="button" data-ng-click="vm.signUp()" ng-disabled="signupForm.$invalid">Submit</button>
+            <button class="btn btn-lg btn-danger btn-block" type="button" data-ng-click="vm.signUp()" ng-disabled="signupForm.$invalid">Submit</button>
         </form>
     </div>
 </div>
