--- a/BloodConnector.WebAPI/Views/Shared/_Layout.cshtml
+++ b/BloodConnector.WebAPI/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <meta name="description" content="Blood Connector in all over the world, Bangladeshi blood donor" />
     <meta content="IE=edge, chrome=1" http-equiv="X-UA-Compatible" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
     <title>Blood Connector</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
