Added forgot password link

--- a/BloodConnector.WebAPI/app/views/login.html
+++ b/BloodConnector.WebAPI/app/views/login.html
@@ -21,4 +21,7 @@
                data-ng-model="vm.loginData.password" />
     </div>
     <button class="btn btn-lg btn-danger btn-block" name="Submit" type="button" data-ng-click="vm.login()">Login</button>
+    <div class="pull-right mt5">
+        <a href="#forgot-view">Forgot your password?</a>
+    </div>
 </form>
