--- a/BloodConnector.WebAPI/Content/Site.css
+++ b/BloodConnector.WebAPI/Content/Site.css
@@ -21,6 +21,23 @@ footer {
     background-color: #f5f5f5;
 }
 
+/*START : Customize navbar*/
+.navbar-custom {
+    color: #fff;
+    background-color: #d9534f;
+    border-color: #d43f3a;
+}
+.navbar-custom .navbar-nav>li>a {
+    color: #dec9c9;
+}
+.navbar-custom .navbar-brand {
+    color: #dec9c9;
+}
+.selected-menu {
+    color: #ffffff!important;
+}
+/*START : Customize navbar*/
+
 .text-muted {
     margin: 20px 0;
 }
@@ -291,6 +308,9 @@ div.user-menu div.user-menu-content:not(.active){
 .m0 {
     margin: 0 !important;
 }
+.mt5 {
+    margin-top: 5px !important;
+}
 .mb10 {
     margin-bottom: 10px !important;
 }
@@ -313,23 +333,6 @@ div.user-menu div.user-menu-content:not(.active){
     -ms-user-select: none;
     user-select: none;
 }
-
-/*START : Customize navbar*/
-.navbar-custom {
-    color: #fff;
-    background-color: #d9534f;
-    border-color: #d43f3a;
-}
-.navbar-custom .navbar-nav>li>a {
-    color: #dec9c9;
-}
-.navbar-custom .navbar-brand {
-    color: #dec9c9;
-}
-.selected-menu {
-    color: #ffffff!important;
-}
-/*START : Customize navbar*/
 
 /* -- media query for user profile image -- */
 @media (max-width: 767px) {
