--- a/BloodConnector.WebAPI/app/views/login.html
+++ b/BloodConnector.WebAPI/app/views/login.html
@@ -20,8 +20,10 @@
                placeholder="Password"
                data-ng-model="vm.loginData.password" />
     </div>
-    <button class="btn btn-lg btn-danger btn-block" name="Submit" type="button" data-ng-click="vm.login()">Login</button>
-    <div class="pull-right mt5">
-        <a href="#forgot-view">Forgot your password?</a>
+    <button class="btn btn-lg btn-danger btn-block" name="Submit" type="button" data-ng-click="vm.login()">Login <i class="fa fa-arrow-right"></i></button>
+    <div class="clearfix mt10">
+        <div class="pull-right">
+            <a href="#forgot-view">Forgot your password?</a>
+        </div>
     </div>
 </form>
