Added forgot password

--- a/BloodConnector.WebAPI/app/views/login.html
+++ b/BloodConnector.WebAPI/app/views/login.html
@@ -23,7 +23,7 @@
     <button class="btn btn-lg btn-danger btn-block" name="Submit" type="button" data-ng-click="vm.login()">Login <i class="fa fa-arrow-right"></i></button>
     <div class="clearfix mt10">
         <div class="pull-right">
-            <a href="#forgot-view">Forgot your password?</a>
+            <a href="#!forgot">Forgot your password?</a>
         </div>
     </div>
 </form>
