--- a/BloodConnector.WebAPI/Views/Shared/_Layout.cshtml
+++ b/BloodConnector.WebAPI/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@using System.Configuration
+@{
+    var version = ConfigurationManager.AppSettings["WebCruiter.Version"];
+}
+<!DOCTYPE html>
 <html data-ng-app="BloodConnectorApp">
 <head>
     <meta charset="utf-8" />
@@ -45,16 +49,7 @@
     <hr class="transparent-border"/>
 
     <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <p class="text-muted">Created by Taiseer Joudeh. Twitter: <a target="_blank" href="http://twitter.com/tjoudeh">tjoudeh</a></p>
-                </div>
-                <div class="col-md-6">
-                    <p class="text-muted">Taiseer Joudeh Blog: <a target="_blank" href="http://bitoftech.net">bitoftech.net</a></p>
-                </div>
-            </div>
-        </div>
+        <p>&copy; @DateTime.Now.Year - WebCruiter&nbsp;@version</p>
     </footer>
 
     <!-- 3rd party libraries -->
