--- a/BloodConnector.WebAPI/Views/Shared/_Layout.cshtml
+++ b/BloodConnector.WebAPI/Views/Shared/_Layout.cshtml
@@ -49,7 +49,9 @@
     <hr class="transparent-border"/>
 
     <footer>
-        <p>&copy; @DateTime.Now.Year - WebCruiter&nbsp;@version</p>
+        <div class="container">
+            <p class="pull-right mt10">&copy; @DateTime.Now.Year - BloodConnector&nbsp;@version</p>
+        </div>
     </footer>
 
     <!-- 3rd party libraries -->
