--- a/BloodConnector.WebAPI/app/views/login.html
+++ b/BloodConnector.WebAPI/app/views/login.html
@@ -20,8 +20,10 @@
                placeholder="Password"
                data-ng-model="vm.loginData.password" />
     </div>
-    <button class="btn btn-lg btn-danger btn-block" name="Submit" type="button" data-ng-click="vm.login()">Login <i class="fa fa-arrow-right"></i></button>
-    <div class="clearfix mt10">
+    <div class="form-group">
+        <button class="btn btn-lg btn-danger btn-block" name="Submit" type="button" data-ng-click="vm.login()">Login <i class="fa fa-arrow-right"></i></button>
+    </div>
+    <div class="clearfix">
         <div class="pull-right">
             <a href="#!forgot">Forgot your password?</a>
         </div>
