--- a/BloodConnector.WebAPI/app/views/forgot.html
+++ b/BloodConnector.WebAPI/app/views/forgot.html
@@ -1,5 +1,5 @@
 ﻿<form role="form" class="form-forgot" data-ng-controller="forgotController as vm">
-    <div data-ng-hide="!vm.messages" class="alert alert-danger">
+    <div data-ng-hide="!vm.forgotMessages" class="alert alert-danger">
         <ul>
             <li ng-repeat="message in vm.messages">{{message}}</li>
         </ul>
