Complete change password -3

--- a/BloodConnector.WebAPI/Views/Account/ResetPassword.cshtml
+++ b/BloodConnector.WebAPI/Views/Account/ResetPassword.cshtml
@@ -2,9 +2,7 @@
 
 <form role="form" id="form-reset" class="form-reset">
 
-    <div class="alert alert-danger">
-        @Html.ValidationSummary()
-    </div>
+    <div id="reset-errors" class="alert alert-danger"></div>
 
     <img class="img-responsive" src="/Images/blood_logo.jpg"/>
     <h3 class="form-signin-heading">Save your new password</h3>
@@ -26,6 +24,7 @@
 </form>
 <script type="text/javascript">
     window.onload = function () {
+        $("#reset-errors").hide();
         $("#reset-button").click(function () {
             var params = We.parseQueryParams();
             var formData = {
@@ -33,7 +32,7 @@
                 Code: params["code"],
                 Email: params["email"]
             };
-
+            
             $.ajax({
                 type: "POST",
                 contentType: "application/json; charset=utf-8",
@@ -41,10 +40,21 @@
                 url: "/api/account/resetpassword",
                 data: JSON.stringify(formData),
                 success: function (response) {
-                    console.log(response);
+                    window.location.replace("/#!/login");
                 },
                 error: function (response) {
-                    console.log(response);
+                    var jsonResponce = JSON.parse(response.responseText);
+                    var modelErrors = jsonResponce.modelState;
+                    var errorsLi = "";
+                    for (var key in modelErrors) {
+                        for (var i = 0; i < modelErrors[key].length; i++) {
+                            var error = modelErrors[key][i].toLowerCase() === 'invalid token.' ? 'Link has expired. Make sure you click the link in the most recent email you received from us.' : modelErrors[key][i];
+                            errorsLi += '<li>' + error + '</li>';
+                        }
+                    }
+
+                    $("#reset-errors").html('<ul>' + errorsLi + '</ul>');
+                    $("#reset-errors").show();
                 }
             });
         });
