--- a/BloodConnector.WebAPI/app/views/home.html
+++ b/BloodConnector.WebAPI/app/views/home.html
@@ -3,7 +3,10 @@
             &nbsp;
         </div>
         <div class="col-md-8">
-            <h1 style="font-size: 10em">Under Construction</h1>
+            <img class="img-responsive center-block" src="/Images/blood_logo.jpg"/>
+            <hr class="colorgraph mb10" />
+            <h3 class="text-center text-uppercase m0">Our donor list</h3>
+            <hr class="colorgraph mt10"/>
         </div>
         <div class="col-md-2">
             &nbsp;
