--- a/BloodConnector.WebAPI/Content/Site.css
+++ b/BloodConnector.WebAPI/Content/Site.css
@@ -308,6 +308,9 @@ div.user-menu div.user-menu-content:not(.active){
 .m0 {
     margin: 0 !important;
 }
+.mt0 {
+    margin-top: 0 !important;
+}
 .mt10 {
     margin-top: 10px !important;
 }
