Change SighUp to Join Us

--- a/BloodConnector.WebAPI/Views/Shared/_Layout.cshtml
+++ b/BloodConnector.WebAPI/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                     <li data-ng-hide="!vm.authentication.isAuth"><a ng-class="{'selected-menu': vm.active.user}" ng-click="vm.changeSelectedClass('user')" href="#!users">Donor's</a></li>
                     <li data-ng-hide="!vm.authentication.isAuth"><a ng-class="{'selected-menu': vm.active.logout}" ng-click="vm.changeSelectedClass('logout'); vm.logOut()" href="javascript:void(0);">LogOut</a></li>
                     <li data-ng-hide="vm.authentication.isAuth"><a ng-class="{'selected-menu': vm.active.login}" ng-click="vm.changeSelectedClass('login')" href="#!login">LogIn</a></li>
-                    <li data-ng-hide="vm.authentication.isAuth"><a ng-class="{'selected-menu': vm.active.signup}" ng-click="vm.changeSelectedClass('signup')" href="#!signup">SignUp</a></li>
+                    <li data-ng-hide="vm.authentication.isAuth"><a ng-class="{'selected-menu': vm.active.signup}" ng-click="vm.changeSelectedClass('signup')" href="#!signup">Join Us</a></li>
                 </ul>
             </div>
         </div>
