--- a/BloodConnector.WebAPI/Views/Shared/_Layout.cshtml
+++ b/BloodConnector.WebAPI/Views/Shared/_Layout.cshtml
@@ -43,6 +43,7 @@
     <hr class="transparent-border"/>
 
     <div class="container">
+        <toaster-container></toaster-container>
         @RenderBody()
     </div>
 
