--- a/BloodConnector.WebAPI/Views/Shared/_Layout.cshtml
+++ b/BloodConnector.WebAPI/Views/Shared/_Layout.cshtml
@@ -49,9 +49,12 @@
 
     <hr class="transparent-border"/>
 
-    <footer>
-        <div class="container">
-            <p class="pull-right mt10">&copy; @DateTime.Now.Year - BloodConnector&nbsp;@version</p>
+    <footer class="navbar-fixed-bottom">
+        <div class="container text-center">
+            <a href="https://www.facebook.com/bloodconnector" target="_blank"><i class="fa fa-facebook"></i></a>
+            <a href="javascript:void(0);" target="_blank"><i class="fa fa-twitter"></i></a>
+            <a href="javascript:void(0);" target="_blank"><i class="fa fa-youtube"></i></a>
+            <span class="pull-right">&copy; @DateTime.Now.Year - BloodConnector&nbsp;@version</span>
         </div>
     </footer>
 
