--- a/BloodConnector.WebAPI/Views/Shared/_Layout.cshtml
+++ b/BloodConnector.WebAPI/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
     <hr class="transparent-border"/>
 
     <footer class="navbar-fixed-bottom">
-        <div class="container text-center">
+        <div class="container text-left">
             <a href="https://www.facebook.com/bloodconnector" target="_blank"><i class="fa fa-facebook"></i></a>
             <a href="javascript:void(0);" target="_blank"><i class="fa fa-twitter"></i></a>
             <a href="javascript:void(0);" target="_blank"><i class="fa fa-youtube"></i></a>
