--- a/BloodConnector.WebAPI/app/views/signup.html
+++ b/BloodConnector.WebAPI/app/views/signup.html
@@ -115,7 +115,7 @@
                     <label>
                         <input id="chkCondition" name="chkCondition" type="checkbox" ng-model="vm.registration.termsAndCondition" ng-false-value="0" required /> I accept &nbsp;
                     </label>
-                    <a data-toggle="modal" class="pointer-cursor" data-target="#myModal">this terms and conditions</a>
+                    <a data-backdrop="static" data-keyboard="false" data-toggle="modal" class="pointer-cursor" data-target="#myModal">this terms and conditions</a>
                 </div>
             </div>
             <button class="btn btn-lg btn-danger btn-block" type="button" data-ng-click="vm.signUp()" ng-disabled="signupForm.$invalid">Submit</button>
