--- a/BloodConnector.WebAPI/Views/Shared/_Layout.cshtml
+++ b/BloodConnector.WebAPI/Views/Shared/_Layout.cshtml
@@ -52,10 +52,11 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">Modal Header</h4>
+                        <h4 class="modal-title"><i class="fa fa-info-circle" aria-hidden="true"></i> Information</h4>
                     </div>
                     <div class="modal-body">
-                        <p>This is a small modal.</p>
+                        This is a small modal. This is a small modal. This is a small modal.
+                        This is a small modal. This is a small modal. This is a small modal.
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
